alterado para compilar com java 8